cambios de repo, pruebas

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <header class="headerBar">
+        <h1 class="title">Anelisse Acevedo | Front-end Developer</h1>
+    </header>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
 </body>
