--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,9 @@
     <header class="headerBar">
         <h1 class="title">Anelisse Acevedo | Front-end Developer</h1>
     </header>
-    <div id="root"></div>
-    <script src="main.js" type="module"></script>
+    <div id="root">
+    </div>
+    <script src="./main.js" type="module"></script>
 </body>
 
 </html>
