--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Anelisse Acevedo - Front-end Developer</title>
+    <link rel='icon' href='favicon.ico'>
     <link rel='stylesheet' href='style.css'>
 
     <!-- update the version number as needed -->
